One-to-Many mapping implemented in JPA, front end split to dashboard and order, ordering implemented in the service layer.

--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>quickfood</title>
+		<title>Lunch4You</title>
 	</head>
 	<body>
-		<h1>Welcome to Lunch4You!</h1>
+		<h1>Lunch4You Order</h1>
 		<hr>
-		<ul id="meals"></ul>
-		<form id="create"></form>
+		<div id="article"></div>
+		<form id="orderForm"></form>
 		<script type='text/javascript' src='steal/steal.js?app'></script>
 	</body>
 </html>
