front-end split to shop and backoffice

--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -4,10 +4,9 @@
 		<title>Lunch4You</title>
 	</head>
 	<body>
-		<h1>Lunch4You Dashboard</h1>
+		<h1>Lunch4You Back-office</h1>
 		<hr>
 		<ul id="meals"></ul>
-		<form id="create"></form>
-		<script type='text/javascript' src='steal/steal.js?app'></script>
+		<script type='text/javascript' src='steal/steal.js?backoffice'></script>
 	</body>
 </html>
