--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -4,10 +4,10 @@
 		<title>Lunch4You</title>
 	</head>
 	<body>
-		<h1>Lunch4You Order</h1>
+		<h1>Lunch4You Shop</h1>
 		<hr>
 		<div id="article"></div>
 		<form id="orderForm"></form>
-		<script type='text/javascript' src='steal/steal.js?app'></script>
+		<script type='text/javascript' src='steal/steal.js?shop'></script>
 	</body>
 </html>
