meal order page formatted

--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -1,13 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+		<link rel="shortcut icon" href=favicon.png />
 		<title>Lunch4You</title>
 	</head>
 	<body>
-		<h1>Lunch4You Shop</h1>
-		<hr>
-		<div id="article"></div>
-		<form id="orderForm"></form>
+		<div id="content"></div>
 		<script type='text/javascript' src='steal/steal.js?shop'></script>
 	</body>
 </html>
