--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<link rel="shortcut icon" href=favicon.png />
+		<link rel="shortcut icon" href="favicon.png" />
 		<title>Lunch4You</title>
 	</head>
 	<body>
