--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -6,7 +6,20 @@
 	<body>
 		<h2>Lunch4You Back-office</h2>
 		<hr>
-		<ul id="meals"></ul>
+		
+<table border="1">
+	<tr>
+		<td>
+		
+			<ul id="meals1"></ul>
+
+		</td>
+		
+		<td>
+			<ul id="meals2"></ul>
+		</td>
+	</tr>
+</table>		
 		<script type='text/javascript' src='steal/steal.js?backoffice'></script>
 	</body>
 </html>
