backoffice table formatting

--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -4,10 +4,11 @@
 		<title>Lunch4You</title>
 	</head>
 	<body>
+		<div id="overlay"></div>
 		<h2>Lunch4You Back-office</h2>
 		<hr>
 		
-<table border="1">
+<table cellspacing="0">
 	<tr>
 		<td>
 		
