Changed ordering of data within backoffice views

--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -12,7 +12,7 @@
 			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">packaging</div>
 		</div>
 		<div class="tab-contents">
-			<div id="tabContent1" class="tab-content">
+			<div id="tabContent1" style="display : none;" class="tab-content">
 				<table><tr><td>
 					<div id="meals1">
 					</div>
@@ -22,8 +22,8 @@
 					</div>
 				</td></tr></table>
 			</div>
-			<div id="tabContent2" style="display : none;">
-				<ul id="meals2"></ul>
+			<div id="tabContent2" style="display : block;">
+				<div id="meals2"></div>
 			</div>
 		</div>
 
