--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -12,17 +12,17 @@
 			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">packaging</div>
 		</div>
 		<div class="tab-contents">
-			<div id="tabContent1" style="display : none;" class="tab-content">
-				<table><tr><td>
-					<div id="meals1">
-					</div>
-					</td>
-					<td>
-					<div id="meals3">
-					</div>
-				</td></tr></table>
+			<div id="tabContent1" style="display : block;" class="tab-content">
+				<table id="cookingViewTable">
+					<tr>
+						<td id="meals1">
+						</td>
+						<td id="meals3">
+						</td>
+					</tr>
+				</table>
 			</div>
-			<div id="tabContent2" style="display : block;">
+			<div id="tabContent2" style="display : none;">
 				<div id="meals2"></div>
 			</div>
 		</div>
