--- a/src/main/resources/META-INF/velocity/menuMailTemplate_header_DHL.html
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate_header_DHL.html
@@ -1,7 +1,1 @@
-		<p>
-		Dear ${customer.firstName} ${customer.lastName},
-		</p>
-		<p>
-		Please find below this week's menu from the Lunch4you food delivery service. For ordering and payment please follow the instructions
-		located below the menu.
-		</p>
+#parse( "META-INF/velocity/menuMailTemplate_header_default.html" )
