--- a/src/main/resources/META-INF/velocity/menuMailTemplate_header_default.html
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate_header_default.html
@@ -5,3 +5,8 @@
 		Please find below this week's menu from the Lunch4you food delivery service. For ordering and payment information 
 		please follow the instructions below the menu.
 		</p>
+
+		<p>
+		Also feel free to visit our <b><u>recently opened restaurant inside OC Růže!!!</u></b> The entrance is right at the corner of OC Růže between the Pizza and Gyros takeaway booths.
+		</p>
+		
