- Further support for menu editing including disabling and setting the limit

--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -8,11 +8,12 @@
 		<h2>Lunch4You Back-office</h2>
 		<hr>
 		<div id="tabSelectors" class="tab-selectors">
-			<div id="tabSelector1" class="tab-selector" onClick="onTabClick(1);">cooking</div>
-			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">packaging</div>
+			<div id="tabSelector1" class="tab-selector" onClick="onTabClick(1);">Cooking</div>
+			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">Packaging</div>
+			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(3);">Menu</div>
 		</div>
 		<div class="tab-contents">
-			<div id="tabContent1" style="display : block;" class="tab-content">
+			<div id="tabContent1" style="display : none;" class="tab-content">
 				<table id="cookingViewTable">
 					<tr>
 						<td id="meals1">
@@ -24,6 +25,9 @@
 			</div>
 			<div id="tabContent2" style="display : none;">
 				<div id="meals2"></div>
+			</div>
+			<div id="tabContent3" style="display : block;">
+				<div id="menuEdit"></div>
 			</div>
 		</div>
 
