A number of changes,mainly: - IE6 layout - Menu editing - Product code - Referral - cretion of account without DDL - Updated roadmap

--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="shortcut icon" href="favicon.png" />
+		<link rel="stylesheet" type="text/css" href="common/form.css"/>
 		<title>Lunch4You</title>
 	</head>
 	<body>
