No-cache meta tag added for browsers

--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
+		<meta http-equiv="Pragma" content="no-cache">
 		<link rel="shortcut icon" href="favicon.png" />
-		<link rel="stylesheet" type="text/css" href="common/form.css"/>
 		<title>Lunch4You</title>
 	</head>
 	<body>
