--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -10,10 +10,10 @@
 		<div id="tabSelectors" class="tab-selectors">
 			<div id="tabSelector1" class="tab-selector" onClick="onTabClick(1);">Cooking</div>
 			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">Packaging</div>
-			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(3);">Menu</div>
+			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(3);">Menu Administration</div>
 		</div>
 		<div class="tab-contents">
-			<div id="tabContent1" style="display : none;" class="tab-content">
+			<div id="tabContent1" style="display : block;" class="tab-content">
 				<table id="cookingViewTable">
 					<tr>
 						<td id="meals1">
@@ -26,7 +26,7 @@
 			<div id="tabContent2" style="display : none;">
 				<div id="meals2"></div>
 			</div>
-			<div id="tabContent3" style="display : block;">
+			<div id="tabContent3" style="display : none;">
 				<div id="menuEdit"></div>
 			</div>
 		</div>
