Commit after very long time...

--- a/src/main/resources/META-INF/velocity/menuMailTemplate_footer_ACCENTURE.html
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate_footer_ACCENTURE.html
@@ -15,12 +15,12 @@
 		
 		<h4>Delivery</h4>
 		<p>
-		The food will be available for pickup <b>from 11:30</b> at <b>Štěpán Vosyka's table</b>.
+		The food will be available for pickup <b>from 11:30</b> at <b>Accenture reception</b>.
 		</p>
 		
 		<h4>Payment</h4>
 		<p>
-		Please place the money (or vouchers) into an envelope available at Štěpán's table and put it into the paper box labeled "Lunch4you". 
-		Please write your name on the sticker on the envelope (DON'T seal it, so that the envelope can be reused again). In case you don't 
+		Please place the money (or vouchers) into an envelope available next to the paper box labeled "Lunch4you". 
+		Please write your name on the sticker on the envelope (DON'T seal it, so that the envelope can be reused again) and place it in the paper box. In case you don't 
 		have exact change, some coins will be placed next to the box for your use.
 		</p>
