--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<div id="content"></div>
-		<script type='text/javascript' src='steal/steal.js?shop'></script>
+		<script type='text/javascript' src='steal/steal.production.js?shop'></script>
 	</body>
 </html>
