--- a/src/main/webapp/backoffice.html
+++ b/src/main/webapp/backoffice.html
@@ -5,31 +5,7 @@
 	</head>
 	<body>
 		<div id="overlay"></div>
-		<h2>Lunch4You Back-office</h2>
-		<hr>
-		<div id="tabSelectors" class="tab-selectors">
-			<div id="tabSelector1" class="tab-selector" onClick="onTabClick(1);">Cooking</div>
-			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(2);">Packaging</div>
-			<div id="tabSelector2" class="tab-selector" onClick="onTabClick(3);">Menu Administration</div>
-		</div>
-		<div class="tab-contents">
-			<div id="tabContent1" style="display : block;" class="tab-content">
-				<table id="cookingViewTable">
-					<tr>
-						<td id="meals1">
-						</td>
-						<td id="meals3">
-						</td>
-					</tr>
-				</table>
-			</div>
-			<div id="tabContent2" style="display : none;">
-				<div id="meals2"></div>
-			</div>
-			<div id="tabContent3" style="display : none;">
-				<div id="menuEdit"></div>
-			</div>
-		</div>
+		<div id="content"></div>
 
 		<script type='text/javascript' src='steal/steal.js?backoffice'></script>
 	</body>
