vela zmien, tato verzia nainstalovana do produkcie

--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -7,6 +7,14 @@
 	</head>
 	<body>
 		<div id="content"></div>
+
+		<script type='text/javascript' src='steal/steal.production.js'></script>
+		<script type='text/javascript' src='shop/production.v03.js'></script>
+
+		<!--
 		<script type='text/javascript' src='steal/steal.js?shop'></script>
+		-->
+
+
 	</body>
 </html>
