...kopec novych veci, hlavne registracia / prihlasenie

--- a/src/main/resources/META-INF/velocity/menuMailTemplate_footer_ORACLE.html
+++ b/src/main/resources/META-INF/velocity/menuMailTemplate_footer_ORACLE.html
@@ -15,7 +15,7 @@
 		<h4>Delivery</h4>
 		<p>
 		The food will be delivered every day <b>at 13:00</b> to the <b>Oracle</b> office.
-		Food will be available for pickup at the kitchen on 3rd floor.
+		Food will be available for pickup at the kitchen on 2nd floor.
 		</p>
 		
 		<h4>Payment</h4>
